forge+iu: add repositoryUrl configuration option

--- a/ui/src/forge-config.json
+++ b/ui/src/forge-config.json
@@ -56,6 +56,8 @@
       "version": "1.0.0",
       "vm": {
         "config": {
+          "diskSize": 4096,
+          "memorySize": 2048,
           "ports": [],
           "system": {}
         },
@@ -94,6 +96,8 @@
       "version": "1.0.0",
       "vm": {
         "config": {
+          "diskSize": 4096,
+          "memorySize": 2048,
           "ports": [
             "5000:5000"
           ],
@@ -142,7 +146,9 @@
       "apps.*.vm.name",
       "apps.*.vm.requirements",
       "apps.*.vm.config.system",
-      "apps.*.vm.config.ports"
+      "apps.*.vm.config.ports",
+      "apps.*.vm.config.memorySize",
+      "apps.*.vm.config.diskSize"
     ]
   },
   "packages": [
@@ -183,7 +189,7 @@
       "description": "GDAL package built from GitHub source.",
       "development": {
         "requirements": [],
-        "shellHook": "echo -e \"\\nWelcome. This environment contains all dependencies required\"\necho \"to build this software from source.\"\necho\necho \"Now, navigate to the source code directory and you are all set to\"\necho \"start hacking.\"\n"
+        "shellHook": "echo -e \"\\nWelcome. This environment contains all dependencies required\"\necho \"to build $DEVENV_PACKAGE_NAME from source.\"\necho\necho \"Grab the source code from $DEVENV_PACKAGE_SOURCE\"\necho \"or from the upstream repository and you are all set to start hacking.\"\n"
       },
       "homePage": "https://gdal.org",
       "mainProgram": "gdalinfo",
@@ -235,7 +241,7 @@
       "description": "GEOS package built from GitHub source.",
       "development": {
         "requirements": [],
-        "shellHook": "echo -e \"\\nWelcome. This environment contains all dependencies required\"\necho \"to build this software from source.\"\necho\necho \"Now, navigate to the source code directory and you are all set to\"\necho \"start hacking.\"\n"
+        "shellHook": "echo -e \"\\nWelcome. This environment contains all dependencies required\"\necho \"to build $DEVENV_PACKAGE_NAME from source.\"\necho\necho \"Grab the source code from $DEVENV_PACKAGE_SOURCE\"\necho \"or from the upstream repository and you are all set to start hacking.\"\n"
       },
       "homePage": "https://libgeos.org",
       "mainProgram": "geosop",
@@ -284,7 +290,7 @@
       "description": "Hello package built from source code tarball.",
       "development": {
         "requirements": [],
-        "shellHook": "echo -e \"\\nWelcome. This environment contains all dependencies required\"\necho \"to build this software from source.\"\necho\necho \"Now, navigate to the source code directory and you are all set to\"\necho \"start hacking.\"\n"
+        "shellHook": "echo -e \"\\nWelcome. This environment contains all dependencies required\"\necho \"to build $DEVENV_PACKAGE_NAME from source.\"\necho\necho \"Grab the source code from $DEVENV_PACKAGE_SOURCE\"\necho \"or from the upstream repository and you are all set to start hacking.\"\n"
       },
       "homePage": "https://www.gnu.org/software/hello",
       "mainProgram": "hello",
@@ -338,7 +344,7 @@
       "description": "Python web application example built from GitHub source.",
       "development": {
         "requirements": [],
-        "shellHook": "echo -e \"\\nWelcome. This environment contains all dependencies required\"\necho \"to build this software from source.\"\necho\necho \"Now, navigate to the source code directory and you are all set to\"\necho \"start hacking.\"\n"
+        "shellHook": "echo -e \"\\nWelcome. This environment contains all dependencies required\"\necho \"to build $DEVENV_PACKAGE_NAME from source.\"\necho\necho \"Grab the source code from $DEVENV_PACKAGE_SOURCE\"\necho \"or from the upstream repository and you are all set to start hacking.\"\n"
       },
       "homePage": "https://github.com/imincik/python-web-example",
       "mainProgram": "python-web",
@@ -387,5 +393,10 @@
       "packages.*.build.standardBuilder.requirements.build",
       "packages.*.test.script"
     ]
-  }
+  },
+  "recipeDirs": {
+    "apps": null,
+    "packages": null
+  },
+  "repositoryUrl": "github:imincik/nix-forge"
 }
