--- a/ui/src/forge-config.json
+++ b/ui/src/forge-config.json
@@ -197,6 +197,7 @@
       "source": {
         "git": "github:OSGeo/gdal/3679e5e4511ae8b4a956ded7ef7be23fdb86b7db",
         "hash": "sha256-0cHD1+vEAahllGNOe6Y4uec44HmCvlJphRj8JPJzOXc=",
+        "path": null,
         "url": null
       },
       "test": {
@@ -249,6 +250,7 @@
       "source": {
         "git": "github:libgeos/geos/883f237d1ecbf49f8efd09905df05814783c5b50",
         "hash": "sha256-enHSmHW8bgRIv33cQrlllF6rbrCkXfqQilcu53LQiRE=",
+        "path": null,
         "url": null
       },
       "test": {
@@ -298,6 +300,7 @@
       "source": {
         "git": null,
         "hash": "sha256-jZkUKv2SV28wsM18tCqNxoCZmLxdYH2Idh9RLibH2yA=",
+        "path": null,
         "url": "mirror://gnu/hello/hello-2.12.1.tar.gz"
       },
       "test": {
@@ -352,6 +355,7 @@
       "source": {
         "git": "github:imincik/python-web-example/bd57b302e930f3b8b80448d2c08a3aac7d48e4ec",
         "hash": "sha256-nSW5746+criXHPrxmJ+0zhJCMwl78eer03qQAvDIo5U=",
+        "path": null,
         "url": null
       },
       "test": {
@@ -395,8 +399,8 @@
     ]
   },
   "recipeDirs": {
-    "apps": null,
-    "packages": null
+    "apps": "/nix/store/5my0m9n0n12cvmxqmqaix2g3lkzldrwm-apps",
+    "packages": "/nix/store/x791cdja74zz2wh27565kdl2aix53crj-packages"
   },
   "repositoryUrl": "github:imincik/nix-forge"
 }
