ui/options: add enable option to programs and containers filter

--- a/ui/src/forge-config.json
+++ b/ui/src/forge-config.json
@@ -133,12 +133,14 @@
     "containers": [
       "apps.*.name",
       "apps.*.version",
+      "apps.*.containers.enable",
       "apps.*.containers.images",
       "apps.*.containers.composeFile"
     ],
     "programs": [
       "apps.*.name",
       "apps.*.version",
+      "apps.*.programs.enable",
       "apps.*.programs.requirements"
     ],
     "vm": [
