--- a/ui/src/forge-config.json
+++ b/ui/src/forge-config.json
@@ -14,7 +14,7 @@
           "/nix/store/7rj1254n0xcqrsccydjy45cncn0bwmcv-forge-registry-0.1.0"
         ]
       },
-      "usage": "This service provides a OCI-compliant container registry for Nix Forge\nand allows to load Nix Forge containers directly to Docker, Podman or\nKubernetes.\n\n1. Deploy registry in a shell environment (see instructions below)\n   and launch it\n```\n  forge-registry\n```\n\n2. Launch example package container with Podman\n```\n  podman run -it --tls-verify=false \\\n  localhost:6443/packages/hello:latest\n```\n\n3. Launch example application with Podman\n```\n  podman run -it --tls-verify=false \\\n  localhost:6443/applications/python-web-app/api:latest\n```\n\n4. Launch example application with Kubernetes\n```\n  kubectl run python-web \\\n  --image=localhost:6443/applications/python-web-app/api:latest\n```\n",
+      "usage": "This service provides a OCI-compliant container registry for Nix Forge\nand allows to load Nix Forge containers directly to Docker, Podman or\nKubernetes.\n\n* Deploy registry in a shell environment (see instructions below)\n   and launch it\n```\n  forge-registry\n```\n\n* Launch example package container with Podman\n```\n  podman run -it --tls-verify=false \\\n  localhost:6443/packages/hello:latest\n```\n\n* Launch example application with Podman\n```\n  podman run -it --tls-verify=false \\\n  localhost:6443/applications/python-web-app/api:latest\n```\n\n* Launch example application with Kubernetes\n```\n  kubectl run python-web \\\n  --image=localhost:6443/applications/python-web-app/api:latest\n```\n",
       "version": "0.1.0",
       "vm": {
         "config": {
