--- a/ui/src/forge-config.json
+++ b/ui/src/forge-config.json
@@ -18,6 +18,7 @@
       "version": "0.1.0",
       "vm": {
         "config": {
+          "cores": 4,
           "diskSize": 4096,
           "memorySize": 2048,
           "ports": [],
@@ -86,6 +87,7 @@
       "version": "1.0.0",
       "vm": {
         "config": {
+          "cores": 4,
           "diskSize": 4096,
           "memorySize": 2048,
           "ports": [],
@@ -126,6 +128,7 @@
       "version": "1.0.0",
       "vm": {
         "config": {
+          "cores": 4,
           "diskSize": 4096,
           "memorySize": 2048,
           "ports": [
@@ -179,6 +182,7 @@
       "apps.*.vm.requirements",
       "apps.*.vm.config.system",
       "apps.*.vm.config.ports",
+      "apps.*.vm.config.cores",
       "apps.*.vm.config.memorySize",
       "apps.*.vm.config.diskSize"
     ]
@@ -187,7 +191,11 @@
     {
       "build": {
         "debug": false,
-        "extraDrvAttrs": {},
+        "extraDrvAttrs": {
+          "passthru": {
+            "prodEnv": "/nix/store/xm8rha9103rvr1y2f4vaq2c6k70m374k-forge-registry-prod-env"
+          }
+        },
         "pythonAppBuilder": {
           "disabledTests": [],
           "enable": true,
@@ -204,7 +212,11 @@
             "dependencies": [
               "/nix/store/khxpw9ys6n3byzxrwwavfs0c1qpwcjym-python3.13-flask-3.1.2"
             ],
-            "optional-dependencies": {}
+            "optional-dependencies": {
+              "production": [
+                "/nix/store/scis9zjhc5bw22sv903wkxbn7wjiig68-python3.13-gunicorn-23.0.0"
+              ]
+            }
           }
         },
         "pythonPackageBuilder": {
